fix spacing with options body

--- a/src/sidebar/activateRecipe/ActivateRecipePanel.module.scss
+++ b/src/sidebar/activateRecipe/ActivateRecipePanel.module.scss
@@ -68,3 +68,8 @@
   flex-grow: 1;
   padding: 1rem;
 }
+
+.optionsBody {
+  margin-left: -20px;
+  margin-right: -20px;
+}
